create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2164,71 +2164,9 @@ body {
     width: 100% !important;
   }
 }
-.cid-rAvXqnLXaA {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #ffffff;
-}
-.cid-rAvXqnLXaA .mbr-slider .carousel-control {
-  background: #1b1b1b;
-}
-.cid-rAvXqnLXaA .mbr-slider .carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-rAvXqnLXaA .mbr-slider .carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-rAvXqnLXaA .mbr-slider .modal-body .close {
-  background: #1b1b1b;
-}
-.cid-rAvXqnLXaA .mbr-gallery-item > div::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #554346;
-  opacity: 0;
-  -webkit-transition: 0.2s opacity ease-in-out;
-  transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
-}
-.cid-rAvXqnLXaA .mbr-gallery-item > div:hover .mbr-gallery-title::before {
-  background: transparent !important;
-}
-.cid-rAvXqnLXaA .mbr-gallery-item > div:hover:before {
-  opacity: 0.7 !important;
-}
-.cid-rAvXqnLXaA .mbr-gallery-title {
-  font-size: .9em;
-  position: absolute;
-  display: block;
-  width: 100%;
-  bottom: 0;
-  padding: 1rem;
-  color: #fff;
-  z-index: 2;
-}
-.cid-rAvXqnLXaA .mbr-gallery-title:before {
-  content: " ";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  position: absolute;
-  background: #554346 !important;
-  opacity: 0.7;
-  -webkit-transition: 0.2s background ease-in-out;
-  transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
-}
 .cid-rrWfpLnnRt {
   padding-top: 0px;
-  padding-bottom: 60px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-rrWfpLnnRt .mbr-section-subtitle {
@@ -2284,6 +2222,27 @@ body {
     height: auto !important;
   }
 }
+.cid-rAUhrdcASg {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 90px;
+}
+.cid-rAUhrdcASg .image-block {
+  margin: auto;
+}
+.cid-rAUhrdcASg figcaption {
+  position: relative;
+}
+.cid-rAUhrdcASg figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rAUhrdcASg .image-block {
+    width: 100% !important;
+  }
+}
 .cid-rAx2h1N5Ny {
   padding-top: 15px;
   padding-bottom: 15px;
@@ -2328,6 +2287,525 @@ body {
 }
 @media (max-width: 767px) {
   .cid-rrQhYvM7wF .iconfont-wrapper {
+    display: none;
+  }
+}
+.cid-rrtUghjvwb .navbar {
+  background: #ffffff;
+  transition: none;
+  min-height: 77px;
+  padding: .5rem 0;
+}
+.cid-rrtUghjvwb .navbar-dropdown.bg-color.transparent.opened {
+  background: #ffffff;
+}
+.cid-rrtUghjvwb a {
+  font-style: normal;
+}
+.cid-rrtUghjvwb .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-rrtUghjvwb .nav-item a {
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-rrtUghjvwb .nav-item:focus,
+.cid-rrtUghjvwb .nav-link:focus {
+  outline: none;
+}
+.cid-rrtUghjvwb .btn {
+  padding: 0.4rem 1.5rem;
+  display: -webkit-inline-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rrtUghjvwb .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-rrtUghjvwb .menu-logo {
+  margin-right: auto;
+}
+.cid-rrtUghjvwb .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-rrtUghjvwb .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-rrtUghjvwb .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-rrtUghjvwb .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-rrtUghjvwb .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-rrtUghjvwb .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-rrtUghjvwb .menu-logo .navbar-brand .navbar-logo a {
+  display: inline-flex;
+}
+.cid-rrtUghjvwb .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-rrtUghjvwb .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-rrtUghjvwb .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-rrtUghjvwb .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-rrtUghjvwb .dropdown .dropdown-menu {
+  background: #ffffff;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-rrtUghjvwb .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-rrtUghjvwb .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-rrtUghjvwb .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-rrtUghjvwb .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-rrtUghjvwb .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-rrtUghjvwb .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-rrtUghjvwb .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-rrtUghjvwb .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-rrtUghjvwb .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-rrtUghjvwb .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-rrtUghjvwb .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-rrtUghjvwb button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-rrtUghjvwb button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-rrtUghjvwb button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #333333;
+}
+.cid-rrtUghjvwb button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-rrtUghjvwb button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rrtUghjvwb button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rrtUghjvwb button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-rrtUghjvwb nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rrtUghjvwb nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-rrtUghjvwb nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-rrtUghjvwb nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rrtUghjvwb .collapsed.navbar-expand {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rrtUghjvwb .collapsed .btn {
+  display: -webkit-flex;
+}
+.cid-rrtUghjvwb .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-rrtUghjvwb .collapsed .navbar-collapse.collapsing,
+.cid-rrtUghjvwb .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-rrtUghjvwb .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-rrtUghjvwb .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-rrtUghjvwb .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-rrtUghjvwb .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-rrtUghjvwb .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-rrtUghjvwb .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-rrtUghjvwb .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-rrtUghjvwb .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+@media (min-width: 992px) {
+  .cid-rrtUghjvwb .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 4.9rem);
+  }
+}
+.cid-rrtUghjvwb .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-rrtUghjvwb .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-rrtUghjvwb .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rrtUghjvwb .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  overflow: hidden;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-rrtUghjvwb .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-rrtUghjvwb .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-rrtUghjvwb .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-rrtUghjvwb.navbar-expand {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rrtUghjvwb img {
+    height: 3.8rem !important;
+  }
+  .cid-rrtUghjvwb .btn {
+    display: -webkit-flex;
+  }
+  .cid-rrtUghjvwb button.navbar-toggler {
+    display: block;
+  }
+  .cid-rrtUghjvwb .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-rrtUghjvwb .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rrtUghjvwb .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-rrtUghjvwb .navbar-collapse.collapsing,
+  .cid-rrtUghjvwb .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-rrtUghjvwb .navbar-collapse.collapsing .navbar-nav,
+  .cid-rrtUghjvwb .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-rrtUghjvwb .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-rrtUghjvwb .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-rrtUghjvwb .navbar-collapse.collapsing .navbar-buttons,
+  .cid-rrtUghjvwb .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-rrtUghjvwb .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-rrtUghjvwb .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rrtUghjvwb .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    overflow: hidden;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-rrtUghjvwb .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-rrtUghjvwb .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-rrtUghjvwb .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-rrtUghjvwb .menu-logo {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+  }
+}
+.cid-rrtUghjvwb .navbar-collapse {
+  flex-basis: auto;
+  -webkit-flex-basis: auto;
+}
+.cid-rrtUghjvwb .nav-link:hover,
+.cid-rrtUghjvwb .dropdown-item:hover {
+  color: #767676 !important;
+}
+.cid-rAU9adBktr {
+  padding-top: 120px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rAU9adBktr .line {
+  background-color: #ebdedc;
+  color: #ebdedc;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-rAU9adBktr .section-text {
+  padding: 2rem 0;
+}
+.cid-rAU9adBktr .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rAU9adBktr .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-rAU9ix7zKw {
+  padding-top: 0px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rAU9ix7zKw .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-rAU9ix7zKw .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-rAU9ix7zKw .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-rAU9ix7zKw .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-rAU9ix7zKw .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #554346;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-rAU9ix7zKw .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-rAU9ix7zKw .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-rAU9ix7zKw .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-rAU9ix7zKw .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #554346 !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-rAUfVCOX9s {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rAUfVCOX9s .title {
+  padding-bottom: 2.5rem;
+}
+.cid-rAUfVCOX9s .mbr-text {
+  color: #000000;
+  margin: 0;
+  padding-top: 0.5rem;
+}
+.cid-rAUfVCOX9s .iconfont-wrapper {
+  display: flex;
+  align-items: center;
+  width: 2rem;
+  height: 2rem;
+  margin-right: 2rem;
+}
+.cid-rAUfVCOX9s .iconfont-wrapper .amp-iconfont {
+  font-size: 2rem;
+}
+.cid-rAUfVCOX9s .wrapper {
+  display: flex;
+  padding: 1rem 0;
+}
+.cid-rAUfVCOX9s .wrapper .b-info {
+  width: 100%;
+}
+@media (max-width: 767px) {
+  .cid-rAUfVCOX9s .iconfont-wrapper {
     display: none;
   }
 }
